fix scrollbar in create chat modal

--- a/src/components/Modals/CreateChat/index.css
+++ b/src/components/Modals/CreateChat/index.css
@@ -14,6 +14,11 @@
   cursor: pointer;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
+
 .dorpdown-molad-flag-default {
   color: #616161;
   position: relative;
